# DanmakuLight

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
src/: cmds.ts  main.ts  main.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  config_panel.rs  lib.rs  main.rs  message.rs  ricq_backend.rs  tray.rs  ws_server.rs
src/config_panel/: hooks.ts  index.scss  index.tsx  settings-bot.tsx  settings-paddings.tsx  settings-ws.tsx  window-control.tsx
src/config_panel/components/: sub-dialog.tsx
src/danmaku_window/: index.scss  index.tsx
src/utils/: limit-int.ts
