[package]
name = "danmaku-light"
version = "0.1.0"
description = "元火弹幕姬 Light。"
authors = ["wybxc@qq.com"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "config-json5", "system-tray"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev" }
ws = "0.9"
anyhow = "1.0"
log = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
