[package]
name = "danmaku-light"
version = "0.1.0"
description = "元火弹幕姬 Light。"
authors = ["wybxc@qq.com"]
license = "Apache-2.0"
repository = "https://github.com/PKUOriginalFire/DanmakuLight"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["api-all", "config-json5", "system-tray"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
ws = "0.9"
anyhow = "1.0"
log = "0.4"
confy = "0.5"
edit = "0.1.4"
chocho = { git = "https://github.com/Wybxc/chocho.git" }
chocho_msg = { git = "https://github.com/Wybxc/chocho.git" }
async-trait = "0.1.68"
once_cell = "1.18"
parking_lot = "0.12"
tokio-tungstenite = "0.19"
tokio = "1.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
ricq = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
ricq-core = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
